# legal_hallucination_dataset_evaluation

./: .gitignore  README.md  models.py  pyproject.toml
data/: classify.py  curate.py  db.py  templates.py
data/input/: benchmark.csv
evaluation/: config.py  providers.py  run.py
